Remove overflow-y as it causes the overflow issue
Originally, when this overflow-y was added, the share playlist dropdown went straight down, so there would no need for the content to be able to overflow in the y direction. (FreeTubeApp/FreeTube#2281)

Now, the dropdown swings out to the left by default, and even when it is centered, it still overflows the width of the container as an intentional part of the design.

--- a/src/renderer/views/Playlist/Playlist.scss
+++ b/src/renderer/views/Playlist/Playlist.scss
@@ -7,7 +7,6 @@
   box-sizing: border-box;
   block-size: calc(100vh - 132px);
   margin-inline-end: 1em;
-  overflow-y: auto;
   padding: 10px;
   position: sticky;
   inset-block-start: 96px;
